--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,22 @@ body {
 .social img {
     width: 100%;
 }
+
+footer {
+    background-color: rgb(0, 67, 156);
+}
+
+footer img {
+    width: 100%;
+}
+
+footer ul {
+    list-style: none;
+}
+
+@media screen and (min-width: 992px) {
+.social-contacts {
+    width: 80%;
+    margin: 0 auto;
+    }
+}
