--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 /* Tutti i buttons hanno lo stesso border radius, quindi scriviamo un unico css per esso */
@@ -39,7 +40,7 @@ body {
 }
 
 .jumbotron img, .second-jumbotron img {
-    width: 75%;
+    width: 60%;
 }
 
 .second-jumbotron {
